@@ -4,6 +4,8 @@ Fix dquery css
 Update footer
 Fix header css
 Fix stats css
+Remove utter
+Remove theme dropdown
 
 
 Development Portal (2025-07-31 shi)
